fixed bug with double scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,8 +20,6 @@ $active-hover: #D9E4EA;
   width: calc(100% - 260px);
   right: 260px;
   position: relative;
-  height: 100vh;
-  max-height: 100svh;
   overflow: auto;
   transition: all 0.5s ease;
   display: flex;
