--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -16,7 +16,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 18px 17px;
+  padding: 0px 17px;
 }
 
 .dashboard-container {
